Nifi 6652 UI Fix overflowing text in variables dialog

--- a/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-ui/src/main/webapp/css/dialog.css
+++ b/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-ui/src/main/webapp/css/dialog.css
@@ -319,6 +319,10 @@ li.affected-component-container {
     height: 16px;
 }
 
+span.affected-component-setting-width {
+    max-width: 90%;
+}
+
 div.slick-cell div.overridden {
     text-decoration: line-through;
 }
